--- a/staff_handoff.html
+++ b/staff_handoff.html
@@ -6,7 +6,7 @@
   <title>SERVE STATION</title>
 
   <!-- ✅ 読み込み順を固定（誤作動防止） -->
-  <link rel="stylesheet" href="./ui_theme.css?v=1">
+  <link rel="stylesheet" href="./ui_theme.css?v=20251213_1">
 
   <style>
     :root{ --bg:#f7f7fb; --card:#fff; --line:#e8e8ef; --text:#111; --muted:#666; --danger:#c0392b; --ok:#1e824c; --shadow:0 10px 30px rgba(0,0,0,.06); }
@@ -440,3 +440,4 @@ header.appHeader{
 
 </body>
 </html>
+
