--- a/history.html
+++ b/history.html
@@ -46,8 +46,8 @@
         </div>
 
         <div class="histCalGrid">
-          <div class="histDow" id="calDow"></div>
-          <div class="histDays" id="calGrid"></div>
+          <div class="histDow cal-grid" id="calDow"></div>
+          <div class="histDays cal-grid" id="calGrid"></div>
         </div>
 
         <div class="small" id="pickedLabel"></div>
@@ -64,3 +64,4 @@
   <script src="./ui.js?v=1"></script>
 </body>
 </html>
+
