--- a/history.html
+++ b/history.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>履歴</title>
+  <title>history</title>
 
   <!-- ✅ 統一CSSに一本化 -->
   <link rel="stylesheet" href="./ui.css?v=1">
@@ -18,7 +18,7 @@
   <header class="appHeader">
     <div class="wrap">
       <div class="headRow">
-        <div class="brandTitle">SERVE STATION</div>
+        <div class="brandTitle">history</div>
 
         <nav class="topNav">
           <a class="navItem" href="./staff_handoff.html">受け渡し</a>
@@ -64,4 +64,5 @@
   <script src="./ui.js?v=1"></script>
 </body>
 </html>
+
 
